# hstri

./: AbsTet.hs  AbstractNeighborhood.hs  AbstractTetrahedron.hs  AbstractTetrahedron2.hs  AnySimplex.hs  BarySD.hs  Bench.hs  Blender.hs  Blenderable.hs  CheckAdmissibility.hs  ClosedNorCensus8.hs  ClosedOrCensus6.hs  ClosedOrCensus6.hs-boot  ClosedOrCensus7To10.hs  Collections.hs  Command.hs  ConcreteNormal.hs  CoordSys.hs  DD.hs  DeltaSet.hs  DependentVector.hs  DisjointUnion.hs  DotUtil.hs  Edge.hs  EdgeCentered.hs  Either1.hs  EitherC.hs  Element.hs  Equivalence.hs  EqvGraphs.hs  ExampleComplexes.hs  ExampleTriangulations.hs  Examples.hs  FaceClasses.hs  FaceIx.hs  FaceLattice.hs  FaceLattice2.hs  FacetGluing.hs  Floor.hs  GenericsUtil.hs  (+122 more)
Bench/: TriangulationGen.hs  Triangulations.hs
Blender/: AsGlobal.hs  Blenderable.hs  Build.hs  Conversion.hs  ID.hs  Init.hs  Mesh.hs  Types.hs
Codec/Rga/: Parser.hs  Util.hs  Writer.hs
ConcreteNormal/: Identification.hs  PreRenderable.hs
Data/: AscTuples.hs  EdgeLabelledTree.hs  FiniteFunc.hs  FormalOps.hs  Numbering.hs  ProductType.hs  SumType.hs  VectorArray.hs
Data/BitVector/: Adaptive.hs
Data/Tuple/: Index.hs
DotUtil/: Lenses.hs
Equivalence/: Class.hs  Tests.hs
HsTri/: Console.hs
Interactive/: Command.hs  Floor.hs  ReadInput.hs  Utils.hs
Latexable/: DD.hs
Math/: GaussElim.hs  Group.hs  SparseVector.hs
Math/GaussElim/: Tests.hs
Math/Groups/: S2.hs  S3.hs  Tests.hs
Numeric/AD/: Vector.hs
Orientation/: Tests.hs
OrphanInstances/: Lift.hs
PreRenderable/: TriangleLabel.hs
PrettyUtil/: Matrix.hs
QuadCoordinates/: CanonExt.hs  Class.hs  Dense.hs  MatchingEquations.hs  SolSetConversion.hs  Tests.hs
R3Immersions/: Simplices.hs
Simplicial/: AnySimplex.hs  DeltaSet.hs  DeltaSet1.hs  DeltaSet2.hs  DeltaSet3.hs  GraphComplex.hs  Labels.hs  Layout.hs  Simplex.hs  SimplicialComplex.hs  Union.hs
Simplicial/DeltaSet2/: Layering.hs
Simplicial/SimplicialComplex/: Class.hs
StandardCoordinates/: Class.hs  Dense.hs  MatchingEquations.hs  SurfaceQueries.hs
Tests/: Gens.hs
Tetrahedron/: Constants.hs  Edge.hs  INormalDisc.hs  NormalArc.hs  NormalConstants.hs  NormalCorner.hs  NormalDisc.hs  ONormal.hs  Pieces.hs  Tests.hs  Triangle.hs  Vertex.hs
Tikz/: Base.hs  Gen.hs  InteractiveLayout.hs  Preview.hs  StructureGraph.hs  StructureGraphLayout.hs
Triangulation/: AbstractNeighborhood.hs  CanonOrdered.hs  CanonOrdered.hs-boot  Class.hs  FacetGluing.hs  GlueMap.hs  InnerNormalArc.hs  Morphism.hs  PreTriangulation.hs  Random.hs  Random.hs-boot  Tests.hs  Transformations.hs  VertexLink.hs
VerboseDD/: Types.hs
bak/: S3_inliner_experiments.hs  S3b.hs
old/: DD.hs  Either1.hs  ExampleComplexes.hs  Graph.hs  Labels.hs  Numbering.hs  ToJvx.hs  UPair.hs
old/Simplicial/: AnySimplex.hs  SimplicialComplexN.hs  StrictlyIncreasingMap.hs
