Name:                hstri
Version:             0.2
-- Synopsis:            
-- Description:         
License:             GPL-3
License-file:        LICENSE
Author:              Daniel Schüssler
Maintainer:          anotheraddress@gmx.de
-- Copyright:           
Category:            Math
Build-type:          Simple
-- Extra-source-files:  
Cabal-version:       >=1.2

Library
    -- countering the -XHaskell98 passed by cabal
  extensions: PatternGuards, EmptyDataDecls
  ghc-options: -fno-warn-unused-imports

  Exposed-modules:     
    
    Math.GaussElim
    CoordSys
    CheckAdmissibility
    StandardCoordinates.SurfaceQueries
    AbsTet
    Triangulation.AbstractNeighborhood
    Tetrahedron
    Tetrahedron.Constants
    BarySD
    Blender
    Blender.Build
    Blender.ID
    Blender.Types
    Blender.Blenderable
    Blender.Conversion
    ClosedNorCensus8
    ClosedOrCensus6
    Collections
    ConcreteNormal
    ConcreteNormal.PreRenderable
    Data.AscTuples
    Data.EdgeLabelledTree
    Data.FormalOps
    Data.SumType
    Data.Tuple.Index
    DisjointUnion
    DotUtil
    EdgeCentered
    EitherC
    Element
    Equivalence
    Equivalence.Class
    EqvGraphs
    ExampleTriangulations
    FaceClasses
    FaceIx
    FaceLattice
    Graph
    GraphUtil
    HomogenousTuples
    HsTri
    HsTri.Console
    Tetrahedron.INormalDisc
    InnerProductRepresentation
    Triangulation.InnerNormalArc
    Latexable
    Math.Group
    Math.Groups.S2
    Math.Groups.S3
    MathUtil
    NormalEverything
    Normalizable
    OrderableFace
    Orientation
    OrphanInstances
    OrphanInstances.Lift
    ParseJvx
    Codec.Rga.Util
    Codec.Rga.Parser
    Codec.Rga.Writer
    PolymakeInterface
    PreRenderable
    PreRenderable.TriangleLabel
    PrettyUtil
    PrettyUtil.Matrix
    Latexable.DD
    QuadCoordinates
    QuadCoordinates.Dense
    QuadCoordinates.Class
    QuadCoordinates.CanonExt
    QuadCoordinates.MatchingEquations
    QuickCheckUtil
    Quote
    ShortShow
    Simplicial.DeltaSet1
    Simplicial.DeltaSet2
    Simplicial.DeltaSet2.Layering
    Simplicial.DeltaSet3
    Simplicial.SimplicialComplex
    Simplicial.SimplicialComplex.Class
    SimplicialPartialQuotient
    StandardCoordinates
    StandardCoordinates.Dense
    StandardCoordinates.MatchingEquations
    StandardCoordinates.Class
    THUtil
    THBuild
    TIndex
    Tetrahedron.Edge
    Tetrahedron.NormalArc
    Tetrahedron.NormalConstants
    Tetrahedron.NormalCorner
    Tetrahedron.NormalDisc
    Tetrahedron.Triangle
    Tetrahedron.Vertex
    Tikz.Base
    Tikz.InteractiveLayout
    Tikz.Gen
    Numeric.AD.Vector
    Tikz.Preview
    Tikz.StructureGraph
    Tikz.StructureGraphLayout
    ToPython
    TriArcGraph
    Triangulation
    Triangulation.PreTriangulation
    Triangulation.GlueMap
    Triangulation.Transformations
    Triangulation.VertexLink
    Triangulation.CanonOrdered
    Triangulation.Class
    Triangulation.FacetGluing
    Triangulation.Random
    TriangulationCxtObject
    Util
    VectorUtil
    VerboseDD
    VerboseDD.Types
    Math.SparseVector
    ZapUnits
    Data.BitVector.Adaptive
    Blender.Mesh
    QuadCoordinates.SolSetConversion
    NormalSurfaceBasic
    R3Immersions


  Build-depends: ad, 

          void
        , comonads-fd
        , ansi-wl-pprint
        , arithmoi
        , base >= 4 && < 5
        , binary
        , binary-derive
        , bitset
        , bytestring
        , colour
        , containers
        , data-lens
        , data-lens-template
        , deepseq
        , deepseq-th
        , directory
        , dlist
        , equivalence
        , failure
        , fgl
        , file-location
        , filepath
        , ghc-prim
        , GLFW-b
        , graphviz
        , groom 
        , hashable
        , hxt
        , IfElse 
        , Interpolation
        , MemoTrie 
        , MissingH
        , mtl
        , OneTuple
        , parallel
        , parsec
        , Printf-TH
        , process
        , QuickCheck
        , random
        , safe
        , semigroups
        , simpleargs
        , split
        , syb
        , tagged
        , template-haskell
        , Tensor
        , text
        , th-lift
        , time
        , transformers
        , transformers-compose
        , tuple-th >= 0.2.4
        , TypeCompose
        , utf8-string
        , vect
        , vector
        , vector-space >= 0.8.0
        , xml
        , xml-monad
        , xmlgen
        , zlib
        , numbering
        , blaze-builder
        , blaze-textual

--        , yices-painless

  -- Buildable: False

  -- Other-modules:       
  -- Build-tools:         

