Name:                hstri
Version:             0.3
-- Synopsis:            
-- Description:         
License:             GPL-3
License-file:        LICENSE
Author:              Daniel Schüssler
Maintainer:          anotheraddress@gmx.de
-- Copyright:           
Category:            Math
Build-type:          Simple
-- Extra-source-files:  
Cabal-version:       >=1.2

Library
    -- countering the -XHaskell98 passed by cabal
  extensions: PatternGuards, EmptyDataDecls
  ghc-options: -fno-warn-unused-imports

  Exposed-modules:     
    
    Math.GaussElim
    CoordSys
    CheckAdmissibility
    StandardCoordinates.SurfaceQueries
    AbsTet
    Triangulation.AbstractNeighborhood
    Tetrahedron
    Tetrahedron.Constants
    BarySD
    Blender
    Blender.Build
    Blender.ID
    Blender.Types
    Blender.Blenderable
    Blender.Conversion
    ClosedNorCensus8
    ClosedOrCensus6
    ClosedOrCensus7To10
    Collections
    ConcreteNormal
    ConcreteNormal.Identification
    ConcreteNormal.PreRenderable
    Data.AscTuples
    Data.EdgeLabelledTree
    Data.FormalOps
    Data.SumType
    Data.Tuple.Index
    DisjointUnion
    DotUtil
    DotUtil.Lenses
    EdgeCentered
    EitherC
    Element
    Equivalence
    Equivalence.Class
    EqvGraphs
    ExampleTriangulations
    FaceClasses
    FaceIx
    FaceLattice
    GraphUtil
    HomogenousTuples
    HsTri
    HsTri.Console
    Tetrahedron.INormalDisc
    InnerProductRepresentation
    Triangulation.InnerNormalArc
    Latexable
    Math.Group
    Math.Groups.S2
    Math.Groups.S3
    MathUtil
    NormalEverything
    Normalizable
    OrderableFace
    Orientation
    OrphanInstances
    OrphanInstances.Lift
    ParseJvx
    Codec.Rga.Util
    Codec.Rga.Parser
    Codec.Rga.Writer
    PolymakeInterface
    PreRenderable
    PreRenderable.TriangleLabel
    PrettyUtil
    PrettyUtil.Matrix
    Latexable.DD
    QuadHalf
    QuadCoordinates
    QuadCoordinates.Dense
    QuadCoordinates.Class
    QuadCoordinates.CanonExt
    QuadCoordinates.MatchingEquations
    QuickCheckUtil
    Quote
    ShortShow
    Simplicial.DeltaSet1
    Simplicial.DeltaSet2
    Simplicial.DeltaSet2.Layering
    Simplicial.DeltaSet3
    Simplicial.SimplicialComplex
    Simplicial.SimplicialComplex.Class
    SimplicialPartialQuotient
    StandardCoordinates
    StandardCoordinates.Dense
    StandardCoordinates.MatchingEquations
    StandardCoordinates.Class
    THUtil
    TIndex
    Tetrahedron.Edge
    Tetrahedron.NormalArc
    Tetrahedron.NormalConstants
    Tetrahedron.NormalCorner
    Tetrahedron.NormalDisc
    Tetrahedron.Triangle
    Tetrahedron.Vertex
    Tikz.Base
    Tikz.InteractiveLayout
    Tikz.Gen
    Numeric.AD.Vector
    Tikz.Preview
    Tikz.StructureGraph
    Tikz.StructureGraphLayout
    ToPython
    TriArcGraph
    Triangulation
    Triangulation.PreTriangulation
    Triangulation.GlueMap
    Triangulation.Transformations
    Triangulation.VertexLink
    Triangulation.CanonOrdered
    Triangulation.Class
    Triangulation.FacetGluing
    Triangulation.Random
    TriangulationCxtObject
    Util
    VectorUtil
    VerboseDD
    VerboseDD.Types
    Math.SparseVector
    ZapUnits
    Data.BitVector.Adaptive
    Data.FiniteFunc
    Blender.Mesh
    Blender.Init
    Blender.AsGlobal
    QuadCoordinates.SolSetConversion
    NormalSurfaceBasic
    R3Immersions
    R3Immersions.Simplices


  Build-depends: ad, 

          void
        , comonads-fd
        , ansi-wl-pprint
        , base >= 4 && < 5
        , binary
        , binary-derive
        , bytestring
        , colour
        , containers
        , data-lens
        , data-lens-template
        , deepseq
        , deepseq-th
        , directory
        , dlist
        , equivalence
        , failure
        , fgl
        , file-location
        , filepath
        , ghc-prim
        , graphviz
        , groom 
        , hashable
        , hxt
        , IfElse 
        , Interpolation
        , MemoTrie 
        , mtl
        , OneTuple
        , parsec
        , Printf-TH
        , process
        , QuickCheck
        , random
        , safe
        , semigroups
        , simpleargs
        , split
        , syb
        , tagged
        , template-haskell
        , text
        , th-lift
        , time
        , transformers
        , transformers-compose
        , tuple-th >= 0.2.4
        , TypeCompose
        , utf8-string
        , vect
        , vector
        , vector-space >= 0.8.0
        , xml-monad
        , xmlgen
        , zlib
        , numbering
        , blaze-builder
        , blaze-textual
        , semigroupoids
        , th-build

--        , yices-painless

  -- Buildable: False

  -- Other-modules:       
  -- Build-tools:         

